clusters/dev/apps/reactive-resume/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactive-resume
  namespace: default

spec:
  replicas: 1

  selector:
    matchLabels:
      app: reactive-resume

  template:
    metadata:
      labels:
        app: reactive-resume

    spec:
      containers:
        - name: reactive-resume
          image: amruthpillai/reactive-resume:latest

          ports:
            - containerPort: 3000
