clusters/dev/apps/reactive-resume/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactive-resume-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactive-resume-postgres
  template:
    metadata:
      labels:
        app: reactive-resume-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: reactive-resume-postgres
  namespace: default
spec:
  selector:
    app: reactive-resume-postgres
  ports:
    - port: 5432
      targetPort: 5432
