clusters/dev/apps/reactive-resume/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactive-resume
  namespace: default

spec:
  selector:
    app: reactive-resume

  ports:
    - port: 80
      targetPort: 3000
