clusters/dev/apps/reactive-resume/httproute.yaml
# httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reactive-resume
spec:
  parentRefs:
    - name: it-tools-gateway

  hostnames:
    - "makemycv.mihir.uk"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: reactive-resume
          port: 80
